--- a/index.html
+++ b/index.html
@@ -20,11 +20,53 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <header>
-
+    <header class="header">
+      <div class="container">
+        <section class="hero-section">
+          <nav>
+            <ul>
+              <li><a href="#">Log in</a></li>
+              <li>
+                <a href="#">sign up</a>
+              </li>
+            </ul>
+            <a href="./index.html">URLAUBSGLÜCK</a>
+          </nav>
+          <h1>Share your holiday dreams</h1>
+          <p>And find the perfect partner to fullfill it</p>
+          <button type="button">Find your holiday partner</button>
+        </section>
+      </div>
     </header>
-    <main>
+    <main class="main">
+      <section class="main-section">
+        <div class="conyainer">
+            <h2>Meet a partner for your best holiday</h2>
+           <ul>
+          <li>
+            <img src="./images/hunter.jpg" alt="" />
+            <h3>Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+          <li>
+            <img src="./images/marsha.jpg" alt="" />
+            <h3>Lucas Marsha</h3>
+            <p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards. </p>
+          </li>
+          <li>
+            <img src="./images/walker.jpg" alt="" />
+            <h3>Heather Walker</h3>
+            <p>I'm a happy person that loves cats and climbing on mountains. </p>
+          </li>
+          <li>
+            <img src="./images/hunter-wom.jpg" alt="" />
+            <h3>Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+        </ul> 
+        </div>
         
+      </section>
     </main>
   </body>
 </html>
