--- a/index.html
+++ b/index.html
@@ -23,47 +23,49 @@
     <header class="header">
       <div class="container">
         <section class="hero-section">
-          <nav>
-            <ul>
-              <li><a href="#">Log in</a></li>
-              <li>
-                <a href="#">sign up</a>
+          <nav class="navigation">
+            <ul class="nav-list__item">
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__item">Log in</a></li>
+              <li class="nav-list__item">
+                <a href="#" class="nav-list__item">sign up</a>
               </li>
             </ul>
-            <a href="./index.html">URLAUBSGLÜCK</a>
+            <a href="./index.html" class="logo">URLAUBSGLÜCK</a>
           </nav>
-          <h1>Share your holiday dreams</h1>
-          <p>And find the perfect partner to fullfill it</p>
-          <button type="button">Find your holiday partner</button>
+          <h1 class="title">Share your holiday dreams</h1>
+          <p class="text">And find the perfect partner to fullfill it</p>
+          <button type="button" class="button">Find your holiday partner</button>
         </section>
       </div>
     </header>
     <main class="main">
-      <section class="main-section">
-        <div class="conyainer">
-            <h2>Meet a partner for your best holiday</h2>
-           <ul>
-          <li>
-            <img src="./images/hunter.jpg" alt="" />
-            <h3>Bradley Hunter</h3>
-            <p>Based in Chicago. I love playing tennis and loud music.</p>
+      <section class="section">
+        <div class="container">
+            <h2 class="section__title">Meet a partner for your best holiday</h2>
+           <ul class="partner-list">
+          <li class="partner-list__item">
+            <img src="./images/hunter.jpg" alt="" class="partner-list__image"/>
+            <h3 class="partner-list__name">Bradley Hunter</h3>
+            <p class="partner-list__text">Based in Chicago. I love playing tennis and loud music.</p>
           </li>
-          <li>
-            <img src="./images/marsha.jpg" alt="" />
-            <h3>Lucas Marsha</h3>
-            <p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards. </p>
+          <li class="partner-list__item">
+            <img src="./images/marsha.jpg" alt="" class="partner-list__image" />
+            <h3 class="partner-list__name">Lucas Marsha</h3>
+            <p class="partner-list__text">I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards. </p>
           </li>
-          <li>
-            <img src="./images/walker.jpg" alt="" />
-            <h3>Heather Walker</h3>
-            <p>I'm a happy person that loves cats and climbing on mountains. </p>
+          <li class="partner-list__item">
+            <img src="./images/walker.jpg" alt="" class="partner-list__image"/>
+            <h3 class="partner-list__name">Heather Walker</h3>
+            <p class="partner-list__text">I'm a happy person that loves cats and climbing on mountains. </p>
           </li>
-          <li>
-            <img src="./images/hunter-wom.jpg" alt="" />
-            <h3>Bradley Hunter</h3>
-            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          <li class="partner-list__item">
+            <img src="./images/hunter-wom.jpg" alt="" class="partner-list__image"/>
+            <h3 class="partner-list__name">Bradley Hunter</h3>
+            <p class="partner-list__text">Based in Chicago. I love playing tennis and loud music.</p>
           </li>
         </ul> 
+        <button type="button" class="other-button"></button>
         </div>
         
       </section>
