--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <nav class="navigation">
             <ul class="nav-list__item">
               <li class="nav-list__item">
-                <a href="#" class="nav-list__item">Log in</a></li>
+                <a href="#" class="nav-list__link">Log in</a></li>
               <li class="nav-list__item">
-                <a href="#" class="nav-list__item">sign up</a>
+                <a href="#" class="nav-list__link">sign up</a>
               </li>
             </ul>
             <a href="./index.html" class="logo">URLAUBSGLÜCK</a>
@@ -65,7 +65,7 @@
             <p class="partner-list__text">Based in Chicago. I love playing tennis and loud music.</p>
           </li>
         </ul> 
-        <button type="button" class="other-button"></button>
+        <button type="button" class="other-button">See other partners</button>
         </div>
         
       </section>
